--- a/_sass/_glossary.scss
+++ b/_sass/_glossary.scss
@@ -14,6 +14,10 @@ article.glossary h2::before {
   pointer-events: none;
 }
 
+article.radical-page {
+  max-width: 700px;
+}
+
 article.radical-page h1 {
   text-align: center;
   font-size: 36px;
