Various interface improvements, separated translation and html generation, etc.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,4 +14,6 @@
 		<li>Index of Pali Equivalents</li>
 		<li><a href="../X2_glossary/index.html">Chinese-English Glossary</a></li>
 	</ul>
+	<button onclick="toggleChinese();">Toggle Chinese</button><br/>
+	<button onclick="toggleNotes();">Toggle Notes</button>
 </nav>
