--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -39,3 +39,11 @@ nav ul.submenu {
 nav li {
   font-size: 18px;
 }
+
+nav button {
+	width: 120px;
+	height: 35px;
+	padding: 0;
+	margin-top: 15px;
+	margin-left: 15px;
+}
