--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="DharmaPearls/assets/css/main.css">
     {% if page.type == "translation" %}
     <script src="/assets/js/translation.js"></script>
     {% endif %}
