--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,7 @@
     {% include sidebar.html %}
     {% if page.type == "radicalpage" %}
       {% include radical-page.html %}
-    {% elsif page.type == "default" %}
-      {{ content }}
-    {% elsif page.title contains "Home" or page.title contains "Contents" %}
-      {{ content }}
-    {% elsif page.title contains "Agama" %}
+    {% elsif page.type == "translation" %}
       {% include sutra.html %}
     {% else %}
       {{ content }}
