--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -73,6 +73,11 @@ article.sutra {
   text-indent: 20px;
 }
 
+.verse {
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
+
 .en p {
   text-indent: 20px;
   margin: 0;
