Republished DA.29. Added dropdown menu buttons to sidebar. The toggle buttons should be moved elsewhere.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     {% if page.type == "translation" %}
     <script src="{{ page.base }}assets/js/translation.js"></script>
     {% endif %}
+    <script src="{{ page.base }}assets/js/sidebar.js"></script>
   </head>
   <body>
     {% include header.html %}
