--- a/_sass/_glossary.scss
+++ b/_sass/_glossary.scss
@@ -14,7 +14,7 @@ article.glossary h2::before {
   pointer-events: none;
 }
 
-article.radical-page {
+article.radical-page, article.glossary {
   max-width: 700px;
 }
 
