Changed the home page to a new type and removed the sidebar from the layout for it.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     {% include header.html %}
-    {% include sidebar.html %}
+    {% unless page.type == "home" %}
+      {% include sidebar.html %}
+    {% endunless %}
     {% if page.type == "radicalpage" %}
       {% include radical-page.html %}
     {% elsif page.type == "translation" %}
