Added the Agama title to individual translation pages. Worked on EA.1 gathas. Unpublished the EA_01.html file, republished DA_29.html.

--- a/_includes/sutra.html
+++ b/_includes/sutra.html
@@ -3,6 +3,14 @@
 {% assign n = 0 %}
 <article class="sutra">
   <section class="ch" style="display: none;">
+    <h1>{{ chinese.collection }}</h1>
+  </section>
+
+  <section class="en" style="display: block;">
+    <h1>{{ english.collection }}</h1>
+  </section>
+
+  <section class="ch" style="display: none;">
     <h2 id="ch.0">({{ chinese.number }}) {{ chinese.title }}</h2>
   </section>
 
