--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -34,6 +34,16 @@ article {
 	margin-top: 20px;
 }
 
+.sutra .ch h1 {
+  text-align: center;
+  font-size: 36px;
+}
+
+.sutra .en h1 {
+  text-align: center;
+  font-size: 36px;
+}
+
 .notes {
   margin: 18px 0 18px 0;
 }
