--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -11,13 +11,13 @@ nav {
   padding: 0;
 	background-color: #FFFFD5;
 	color: black;
-	overflow-y: scroll;
+	/* overflow-y: scroll; */
 }
 
 nav img {
   height: 100px;
   width: 100px;
-  margin: 0px 0px 25px 65px;
+  margin: 30px 0px 30px 100px;
   padding: 0;
 }
 
@@ -53,9 +53,20 @@ nav li {
 }
 
 nav button {
+	font-size: 16px;
+	font-family: inherit;
 	width: 120px;
 	height: 35px;
 	padding: 0;
 	margin-top: 15px;
-	margin-left: 15px;
+	margin-left: 90px;
+}
+
+button:hover {
+    background: teal;
+		color: white;
+}
+
+button:focus {
+	outline: none;
 }
