--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -24,9 +24,11 @@ header h1 {
   margin: 15px 0 0 0; padding: 0;
   text-shadow: 2px 2px 4px #000000;
   font-size: 48px;
+  font-family: poynter-oldstyle-text;
 }
 
 header h2 {
   margin: 0 0 0 0; padding: 0;
-  font-size: 18px;
+  font-size: 20px;
+  font-family: cronos-pro;
 }
