--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -4,7 +4,7 @@ nav {
 	width: 300px;
 	position: fixed;
 	top: 100px; left: 0px;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: cronos-pro, Helvetica, sans-serif;
 	font-size: 10px;
 	line-height: 1.25;
 	margin-right: 10px;
@@ -49,7 +49,7 @@ nav ol {
 }
 
 nav li {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 nav button {
