Decided to move the top level navigation to the header with links to a few hub pages.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,12 @@
 <header>
 	<h1><a href="../index.html">Dharma Pearls</a></h1>
 	<h2>Translating Early Buddhism to Modern English</h2>
+	<nav>
+		<ul>
+			<li><a href="{{ page.base}}whats-new.html">What's New</a></li>
+			<li><a href="{{ page.base}}translations.html">Translations</a></li>
+			<li><a href="{{ page.base}}resources.html">Resources</a></li>
+			<li><a href="{{ page.base}}about.html">About</a></li>
+		</ul>
+	</nav>
 </header>
