--- a/_sass/_glossary.scss
+++ b/_sass/_glossary.scss
@@ -50,3 +50,10 @@ section.entry p {
   font-weight: normal;
   text-align: center;
 }
+
+.rad_index p {
+	font-family:   source-han-sans-traditional, 'SimSun', 'PMingLiU';
+	font-size: 24px;
+	font-weight: normal;
+	margin: 0;
+}
