--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,11 +1,12 @@
 
 /* Home Pages Stylesheet */
 article.home {
-  max-width: 600px;
-  margin: 150px auto 0 auto;
+  max-width: 650px;
+  width: 90%;
+  margin: 150px 0 0 0;
   text-align: left;
+  left: 0;
 }
-
 
 article.home h2 {
   font-size: 20px;
