--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -8,7 +8,7 @@ header {
   padding: 0;
   background-color: teal;
   color: white;
-  text-align: center;
+  z-index: 1;
 }
 
 header a {
@@ -21,14 +21,15 @@ header a:hover {
 }
 
 header h1 {
-  margin: 15px 0 0 0; padding: 0;
+  max-width: 900px;
+  margin: 15px 0 0 15px; padding: 0;
   text-shadow: 2px 2px 4px #000000;
   font-size: 48px;
-  font-family: poynter-oldstyle-text;
 }
 
 header h2 {
-  margin: 0 0 0 0; padding: 0;
+  max-width: 900px;
+  margin: 0 0 0 15px; padding: 0;
   font-size: 20px;
   font-family: cronos-pro;
 }
@@ -37,20 +38,23 @@ header nav {
   background-color: lightseagreen;
   height: 30px;
   width: 100%;
+  position: fixed;
+	top: 100px; left: 0px;
   text-align: center;
 }
 
 header nav ul {
+  width: 900px;
+  margin: 0 0 0 -25px;
   list-style-type: none;
-  margin-left: 0px;
-  margin-top: 5px;
 }
 
 header nav ul li {
-  display: inline;
+  float: left;
   color: white;
   font-weight: 600;
-  margin-right: 75px;
+  margin: 5px 0 0 0;
+  padding-right: 50px;
   text-shadow: 1px 1px 2px #000000;
 }
 
