--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -1,65 +1,72 @@
 /* Sidebar Styles */
-nav {
+.sidebar {
 	height: 100%;
-	width: 300px;
+	width: 33%;
+	max-width: 250px;
 	position: fixed;
-	top: 100px; left: 0px;
+	top: 130px; left: 0px;
 	font-family: cronos-pro, Helvetica, sans-serif;
 	font-size: 10px;
 	line-height: 1.25;
-	margin-right: 10px;
+	margin-right: 0px;
   padding: 0;
 	background-color: #FFFFD5;
 	color: black;
 	/* overflow-y: scroll; */
 }
 
-nav img {
+.sidebar .img {
+	width: 100%;
+	max-width: 250px;
+	height: 160px;
+	text-align: center;
+}
+
+.img img {
   height: 100px;
   width: 100px;
-  margin: 30px 0px 30px 100px;
+  margin: 30px auto 30px auto;
   padding: 0;
 }
 
-.inline-icon {
+img.inline-icon {
 	height: 16px; width: 16px;
 	display: inline;
 	vertical-align: baseline;
 	margin: 0; padding: 0;
 }
 
-nav h2 {
+.sidebar h2 {
 	font-size: 24px;
 	margin-top: 100px;
 	margin-bottom: 10px;
 }
 
-nav ul.top {
+.sidebar ul.top {
 	list-style-type: none;
 	margin-left: -30px;
 }
 
-nav ul.submenu {
+.sidebar ul.submenu {
 	list-style-type: none;
 	margin-left: -30px;
 }
 
-nav ol {
+.sidebar ol {
 	margin-left: 7px;
 }
 
-nav li {
+.sidebar li {
   font-size: 18px;
 }
 
-nav button {
+.sidebar button {
 	font-size: 16px;
 	font-family: inherit;
 	width: 120px;
 	height: 35px;
 	padding: 0;
-	margin-top: 15px;
-	margin-left: 90px;
+	margin: 15px auto 0 auto;
 }
 
 button:hover {
