--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -32,7 +32,7 @@
 img.inline-icon {
 	height: 16px; width: 16px;
 	display: inline;
-	vertical-align: baseline;
+	vertical-align: -1px;
 	margin: 0; padding: 0;
 }
 
