Finished rewriting the contents.html file for the Medium Discourses and moved the TOC data to a yaml file for future use.

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -8,6 +8,14 @@ article.home {
   left: 0;
 }
 
+article.home h1, h4 {
+  text-align: center;
+}
+
+article.home h1 {
+  font-size: 32px;
+}
+
 article.home h2 {
   font-size: 20px;
   margin-top: 18px; margin-bottom: 6px;
@@ -20,4 +28,9 @@ article.home h2 {
 .home ul {
   margin: 0 0 15px 0;
   list-style-type: disc;
+}
+
+.refs {
+  color: grey;
+  font-size: 18px;
 }
