--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -12,6 +12,10 @@ p, li, span {
   font-family: cronos-pro, 'Cambria', serif;
 }
 
+hr {
+  border: 1px solid teal;
+}
+
 a.title {
   font-weight: bold;
 }
