Made a couple formatting changes to sutra pages, putting a simple footer with attribution and revision dates on it, and adding the data to the yaml files. Converted MA 1 to the new section-paragraph structure.

--- a/_includes/sutra.html
+++ b/_includes/sutra.html
@@ -28,5 +28,14 @@
       {% assign s = s | plus:1 %}
       {% assign p = 0 %}
     {% endfor %}
+    <section class="footer">
+      <hr/>
+      <h5>{% if english.translator %}
+        Translator: Charles Patton<br/>
+      {% endif %}
+      {% if english.revised %}
+        Last Revised: {{ english.revised }}
+      {% endif %}</h5>
+    </section>
   </article>
 </div>
