--- a/_sass/_translation.scss
+++ b/_sass/_translation.scss
@@ -64,3 +64,13 @@ article.sutra {
 .en p > sup {
   font-size: 12px;
 }
+
+.sutra hr {
+  border: 0;
+  border-top: 3px teal double;
+  margin: 20px 0px 20px 0px;
+}
+
+.sutra .footer h5 {
+  font-size: 14px;
+}
