Made some change to the way I assigned the style.display values and fetch them with JavaScript to show and hide Chinese and notes. There's a bug or inconvenience in JS that prevents the notes button to toggle its message when there's only taisho refs on a page. Something about inline elements stops it from evaluating correctly.

--- a/_includes/sutra-notes-ch.html
+++ b/_includes/sutra-notes-ch.html
@@ -1,5 +1,5 @@
 {% if para.notes %}
-  <ol class="notes" style="display: block;">
+  <ol class="notes">
     {% for note in para.notes %}
     <li id="ch-note.{{ p | plus: 1}}-{{forloop.index}}">{{ note.content }}</li>
     {% endfor %}
