--- a/_includes/sutra-notes-en.html
+++ b/_includes/sutra-notes-en.html
@@ -1,5 +1,5 @@
 {% if english.sections[s].paragraphs[p].notes %}
-  <ol class="notes" style="display: block;">
+  <ol class="notes">
     {% for note in english.sections[s].paragraphs[p].notes %}
     <li id="en-note.{{ p | plus: 1 }}-{{forloop.index}}">{{ note.content }}</li>
     {% endfor %}
