--- a/_sass/_glossary.scss
+++ b/_sass/_glossary.scss
@@ -37,18 +37,30 @@ article.radical-page h2::before {
   pointer-events: none;
 }
 
-section.entry p {
-  margin-left: 50px;
+section.entry {
+  margin: 0 0 0 50px;
+  padding: 0;
+}
+
+.entry p, ol, li {
+  padding: 0; margin: 0;
+}
+
+.entry ol {
+  margin-left:35px;
 }
 
 .term {
-  font-weight: bold;
+  font-weight: normal;
   font-size: 22px;
 }
 
-.headwords {
+article.radical-page h2.headword {
   font-weight: normal;
+  font-size: 40px;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .rad_index p {
