--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -13,7 +13,9 @@ p, li, span {
 }
 
 hr {
-  border: 1px solid teal;
+  border-style: dotted none none none;
+  border-width: 1px;
+  margin: 15px 0 30px 0;
 }
 
 a.title {
