Updated the static page and collection contents files to the new centered style and eliminated a bunch of styles not needed now.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,7 @@
   </head>
   <body>
     {% include header.html %}
-    {% if page.type == "radicalpage" %}
-      {% include radical-page.html %}
-    {% elsif page.type == "translation" %}
+    {% if page.type == "translation" %}
       {% include sutra.html %}
     {% else %}
       {{ content }}
