--- a/_sass/_translation.scss
+++ b/_sass/_translation.scss
@@ -1,31 +1,6 @@
-div.translation {
-  max-width: 900px;
-  text-align: left;
-}
-article.sutra {
-  width: 67%;
-  max-width: 650px;
-}
-
 .ch {
   font-family:   source-han-sans-traditional, 'SimSun', 'PMingLiU';
   font-weight: 200;
-}
-
-.sutra section.en {
-  display: block;
-}
-
-.sutra section.ch {
-  display: none;
-}
-
-.en ol {
-  display: block;
-}
-
-.ch ol {
-  display: none;
 }
 
 .taishoref {
@@ -33,39 +8,17 @@ article.sutra {
   display: inline;
 }
 
-.sutra .ch h2 {
+
+.sutra h2 {
 	margin-top: 20px;
-	margin-bottom: 20px;
-  font-weight: 300;
-}
-
-.sutra .en h2 {
-	margin-top: 20px;
-}
-
-.sutra .ch h1 {
-  text-align: center;
-  font-size: 36px;
-  font-weight: 300;
-}
-
-.sutra .en h1 {
-  text-align: center;
-  font-size: 36px;
 }
 
 .notes {
   margin: 18px 0 18px 0;
+  display: none;
 }
 .notes li {
   font-size: 14px;
-}
-
-.ch p {
-  margin: 10px 0 10px 0;
-  font-family:   source-han-sans-traditional, 'SimSun', 'PMingLiU';
-  font-size: 18px;
-  text-indent: 20px;
 }
 
 .verse {
@@ -74,12 +27,12 @@ article.sutra {
   list-style-type: none;
 }
 
-.en p {
+p {
   text-indent: 20px;
   margin: 0;
 }
 
-.en p > sup {
+p > sup {
   font-size: 12px;
 }
 
