--- a/_includes/sutra.html
+++ b/_includes/sutra.html
@@ -1,35 +1,53 @@
-{% assign chinese = site.data.translation[page.ch] %}
-{% assign english = site.data.translation[page.en] %}
-{% assign s = 0 %}
-{% assign p = 0 %}
+{%- assign chinese = site.data.translation[page.ch] -%}
+{%- assign english = site.data.translation[page.en] -%}
+{%- assign s = 0 -%}
+{%- assign p = 0 -%}
 
-<div class="translation">
-  <article class="sutra">
-      <h1 class="en">{{ english.collection }}</h1>
-      <h2 class="en" id="en.0">{{ english.number }}. {{ english.title }}</h2>
+{%- if english.collection -%}
+  {%- if english.collection contains 'Long' -%}
+    {%- assign clink = '01_dirgha/contents.html' -%}
+  {%- elsif english.collection contains 'Medium' -%}
+    {%- assign clink = '02_madhyama/contents.html' -%}
+  {%- elsif english.collection contains 'Related' -%}
+    {%- assign clink = '03_samyukta/contents.html' -%}
+  {%- elsif english.collection contains 'Numerical' -%}
+      {%- assign clink = '04_ekottarika/contents.html'-%}
+  {%- endif -%}
+{%- endif -%}
 
-    {% for section in chinese.sections %}
-      {% for para in section.paragraphs %}
-        <section class="en">
-          {% if english.sections[s].paragraphs[p].content %}
-            <p id="en.{{ s | plus: 1 }}-{{ p | plus: 1}}">{% if forloop.index < 2 %}{{ s | plus: 1 }}.{% endif %} {{ english.sections[s].paragraphs[p].content }}</p>
-          {% endif %}
-          {% include sutra-verse-en.html %}
-          {% include sutra-notes-en.html %}
-        </section>
-        {% assign p = p | plus:1 %}
-      {% endfor %}
-      {% assign s = s | plus:1 %}
-      {% assign p = 0 %}
+<article class="sutra">
+    <h1><a href="{{ page.base }}{{ clink }}">{{ english.collection }}</a></h1>
+    <h2 id="en.0">{{ english.number }}. {{ english.title }}</h2>
+
+  {% for section in english.sections %}
+    {% for paragraph in section.paragraphs %}
+      <section>
+        {%- if paragraph.content -%}
+          <p id="en.{{ s | plus: 1 }}-{{ p | plus: 1 }}">{{ paragraph.content }}</p>
+        {%- endif -%}
+        {%- include sutra-verse-en.html -%}
+        {%- include sutra-notes-en.html -%}
+      </section>
+      {%- assign p = p | plus:1 -%}
     {% endfor %}
-    <section class="footer">
-      <hr/>
-      <h5>{% if english.translator %}
-        Translator: Charles Patton<br/>
-      {% endif %}
-      {% if english.revised %}
-        Last Revised: {{ english.revised }}
-      {% endif %}</h5>
-    </section>
-  </article>
-</div>
+    {%- assign s = s | plus:1 -%}
+    {%- assign p = 0 -%}
+  {% endfor %}
+
+  {%- if english.notes -%}
+    <h2>Endnotes</h2>
+    <ol>{%- for note in english.notes -%}
+      <li>{{ note.content }}</li>
+    {%- endfor -%}</ol>
+  {%- endif -%}
+
+  <section class="footer">
+    <hr/>
+    <h5>{%- if english.translator -%}
+      Translator: Charles Patton<br/>
+    {%- endif -%}
+    {%- if english.revised -%}
+      Last Revised: {{ english.revised }}
+    {%- endif -%}</h5>
+  </section>
+</article>
