--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,19 +1,7 @@
 
 /* Home Pages Stylesheet */
-article.home {
-  max-width: 650px;
-  width: 90%;
-  margin: 150px 0 0 0;
-  text-align: left;
-  left: 0;
-}
-
-article.home h1, h4 {
+article.home h4 {
   text-align: center;
-}
-
-article.home h1 {
-  font-size: 32px;
 }
 
 article.home h2 {
@@ -21,12 +9,8 @@ article.home h2 {
   margin-top: 18px; margin-bottom: 6px;
 }
 
-.home p {
-  margin: 0 0 15px 0;
-}
-
 .home ul {
-  margin: 0 0 15px 0;
+  margin: 15px 0 15px 0;
   list-style-type: disc;
 }
 
