--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -3,6 +3,11 @@ body {
   font-size: 18px;
 }
 
+img {
+  display: block;
+  margin: 20px auto 20px auto;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: poynter-oldstyle-text, 'Cambria', serif;
   font-weight: 400;
