--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header>
-	<h1><a href="../index.html">Dharma Pearls</a></h1>
+	<h1><a href="{{ base }}index.html">Dharma Pearls</a></h1>
 	<h2>Translating Classical Buddhism to Modern English</h2>
 	<nav>
-			<a class="nav-item" href="{{ page.base}}whats-new.html">What's New</a></li>
-			<a class="nav-item" href="{{ page.base}}translations.html">Translations</a></li>
-			<a class="nav-item" href="{{ page.base}}resources.html">Resources</a></li>
-			<a class="nav-item last" href="{{ page.base}}about.html">About</a></li>
+			<a class="nav-item" href="{{ page.base}}whats-new.html">What's New</a>
+			<a class="nav-item" href="{{ page.base}}translations.html">Translations</a>
+			<a class="nav-item" href="{{ page.base}}resources.html">Resources</a>
+			<a class="nav-item last" href="{{ page.base}}about.html">About</a>
 	</nav>
 </header>
